# cpp_mesher

./: .gitignore  .gitmodules  CMakeLists.txt  _vcpkg.json  copy_resources.ps1  generate_debug.bat  main.cpp  todos.md  utils.ps1  vcpkg.json
blender_plugin/: main.py  requirements.txt
blender_plugin/CppMesherBridge/addons/: plugin.py
blender_plugin/CppMesherBridge/addons/tcp/: connect.py
blender_plugin/CppMesherBridge/addons/trash/: file_change_loop.py
mesher_resources/Shaders/: basic_shader.frag  basic_shader.vert  cell_shader.frag  cell_shader.vert  cube_depth_shader.frag  cube_depth_shader.geo  cube_depth_shader.vert  font_shader.frag  font_shader.vert  frame_buffer_shader.frag  frame_buffer_shader.vert  image_display_shader.frag  image_display_shader.vert  meshline_shader.frag  meshline_shader.vert  msdf_font_shader.frag  msdf_font_shader.vert  no_light_shader.frag  no_light_shader.vert  outline_shader.frag  outline_shader.vert  simple_depth_shader.frag  simple_depth_shader.vert  skybox_shader.frag  skybox_shader.vert  star_shader.frag  star_shader.vert  ui_basic_shader.frag  ui_basic_shader.vert  unlit_shader.frag  unlit_shader.vert  wire_shader.frag  wire_shader.vert
mesher_resources/Shaders/incl/: basic_material.glsl  lights_uniforms.glsl
mesher_resources/Shaders/irradiance/: 2.1.2.background.fs  2.1.2.background.vs  2.1.2.cubemap.vs  2.1.2.equirectangular_to_cubemap.fs  2.1.2.irradiance_convolution.fs  2.1.2.pbr.fs  2.1.2.pbr.vs  2.2.2.background.fs  2.2.2.background.vs  2.2.2.brdf.fs  2.2.2.brdf.vs  2.2.2.irradiance_convolution.fs  2.2.2.pbr.fs  2.2.2.pbr.vs  2.2.2.prefilter.fs
src/: Application.cpp  Application.h  Log.cpp  Log.h  Mesh.cpp  Mesh.h  MeshExporter.cpp  MeshExporter.h  MeshImporter.cpp  MeshImporter.h  OperatorNetwork.cpp  OperatorNetwork.h  Serialize.cpp  Serialize.h  cpp_mesher.h  custom_params.cpp  custom_params.h  formatters.cpp  formatters.h  gltf_utils.cpp  gltf_utils.h  imgui_utils.cpp  imgui_utils.h  main.cpp  main_new.cpp  mesh_utils.cpp  mesh_utils.h  param_utils.cpp  param_utils.h  pch.h  utils.cpp  utils.h
src/cgal/: boolean_utils.cpp  boolean_utils.h
src/meshop/: IMeshOperator.cpp  IMeshOperator.h  MeshGenerator.cpp  MeshGenerator.h
src/meshop/generators/: CylinderGenerator.cpp  CylinderGenerator.h  GridGenerator.cpp  GridGenerator.h  SquareGenerator.cpp  SquareGenerator.h
src/meshop/modifiers/: NormalModifier.cpp  NormalModifier.h  TransformModifier.cpp  TransformModifier.h
src/nodes/: MeshOperators.cpp  MeshOperators.h  node_params.h
src/opengl_renderer/: Application.cpp  Application.h  CameraOrbitController.cpp  CameraOrbitController.h  Input.cpp  Input.h  Log.cpp  Log.h  Scene.cpp  Scene.h  ShaderManager.cpp  ShaderManager.h  Timer.cpp  Timer.h  Window.cpp  Window.h  glanderer.h  pch.h  stb_image.cpp  stb_image_write.cpp
src/opengl_renderer/Algorithms/: PoissonDiscSampling.cpp  PoissonDiscSampling.h  RNDGenerator.cpp  RNDGenerator.h
src/opengl_renderer/Mesh/: CustomMeshLoader.cpp  CustomMeshLoader.h  GLTFLoader.cpp  GLTFLoader.h  Mesh.cpp  Mesh.h  MeshUtils.cpp  MeshUtils.h  PointCloud.cpp  PointCloud.h
src/opengl_renderer/Objects/: BoxLineObject.cpp  BoxLineObject.h  Entity3d.cpp  Entity3d.h  Font2dObject.cpp  Font2dObject.h  IRenderable.cpp  IRenderable.h  LightObject.cpp  LightObject.h  MeshLineObject.cpp  MeshLineObject.h  MeshObject.cpp  MeshObject.h  MeshObjectDebugDraw.cpp  MeshObjectDebugDraw.h  ParticleSystem.cpp  ParticleSystem.h
src/opengl_renderer/Objects/Helpers/: AxisHelper.cpp  AxisHelper.h
src/opengl_renderer/Render/: Camera.cpp  Camera.h  DirectionalLight.cpp  DirectionalLight.h  HelperMeshBuffer.cpp  HelperMeshBuffer.h  Material.cpp  Material.h  OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLCubeShadowMap.cpp  OpenGLCubeShadowMap.h  OpenGLFrameBuffer.cpp  OpenGLFrameBuffer.h  OpenGLHDRSkybox.cpp  OpenGLHDRSkybox.h  OpenGLHDRTexture.cpp  OpenGLHDRTexture.h  OpenGLLayer.cpp  OpenGLLayer.h  OpenGLLineSegmentsBuffer.cpp  OpenGLLineSegmentsBuffer.h  OpenGLMeshBuffer.cpp  OpenGLMeshBuffer.h  OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLShadowMap.cpp  OpenGLShadowMap.h  OpenGLSkybox.cpp  OpenGLSkybox.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h  PointLight.cpp  PointLight.h  SpotLight.cpp  SpotLight.h
src/openmesh/: gmesh.cpp  gmesh.h  openmesh_operators.cpp  openmesh_operators.h  openmesh_utils.cpp  openmesh_utils.h
